[tool.poetry]
name = "plyder"
version = "0.4.1"
description = "Download manager with web-interface."
license = "MIT"
authors = ["kpj <kim.philipp.jablonski@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kpj/plyder"
include = ["plyder/templates/*", "plyder/static/*"]

[tool.poetry.dependencies]
python = "^3.9.0"
fastapi = "^0.104.0"
"mega.py" = "^1.0.8"
Jinja2 = ">=2.11.3,<4.0.0"
aiofiles = ">=0.6,<23.2"
uvicorn = ">=0.13.4,<0.22.0"
loguru = ">=0.5.3,<0.7.0"
sh = ">=1.14.1,<3.0.0"
appdirs = "^1.4.4"
jsonschema = ">=3.2,<5.0"
PyYAML = ">=5.4.1,<7.0.0"
humanize = ">=3.3,<5.0"
psutil = "^5.8.0"
pydantic = "^2"

[tool.poetry.dev-dependencies]
black = "^23.1"
pytest = "^7.0.0"
pytest-mock = "^3.6.1"
beautifulsoup4 = "^4.10.0"
fastapi = {extras = ["all"], version = "^0.104.0"}
bump-my-version = "^0.12.0"

[tool.poetry.scripts]
plyder = "plyder:main"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.bumpversion]
current_version = "0.4.1"
tag = true
commit = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
